// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component should render image avatar properly 1`] = `
<div>
  <div
    class="sc-bdfBwQ kTamvn"
  >
    <img
      src="https://media.istockphoto.com/photos/child-hands-formig-heart-shape-picture-id951945718?k=6&m=951945718&s=612x612&w=0&h=ih-N7RytxrTfhDyvyTQCA5q5xKoJToKSYgdsJ_mHrv0="
    />
  </div>
</div>
`;

exports[`Avatar component should render with all the props given 1`] = `
<div>
  <div
    class="sc-bdfBwQ jERgWU"
  >
    <span>
      PB
    </span>
  </div>
</div>
`;

exports[`Avatar component should render with default theme 1`] = `
<div>
  <div
    class="sc-bdfBwQ cXhJVx"
  >
    <span>
      PB
    </span>
  </div>
</div>
`;

exports[`Avatar component should render with not-allowed cursor when it is disabled 1`] = `
<div>
  <div
    class="sc-bdfBwQ dTrERv"
    disabled=""
  >
    <span>
      PB
    </span>
  </div>
</div>
`;
